codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_question_action_descriptions.snap
---
source: tui/src/keymap_setup.rs
expression: descriptions
---

  Edit Shortcut
  Edit Queued Message · Chat
  Current up, alt-up, shift-left · Default keymap
  Config `tui.keymap.chat.edit_queued_message`
  Move forward through questions, then edit the last queued message.


  Edit Shortcut
  Prompt Stack Back · Chat
  Current shift-right, alt-down · Default keymap
  Config `tui.keymap.chat.prompt_stack_back`
  Move back through questions toward the composer.


  Edit Shortcut
  Skip Question · Chat
  Current ctrl-] · Default keymap
  Config `tui.keymap.chat.skip_question`
  Skip the focused question.
